--- a/index.html
+++ b/index.html
@@ -1,18 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>İlk Web Sayfası</title>
 </head>
+
 <body>
     <!-- Ad Soyad -->
     <h1>Beyza Durmaz</h1>
     <!-- Hakkımda bölümü -->
     <h2>Hakkımda</h2>
-    <p>Merhaba. Ben Beyza. Bursa'da yaşıyorum. Grafik Tasarım mezunuyum fakat yazılıma ilgim olduğundan dolayı bu alanda kendimi geliştiriyorum. Kitap okumayı çok seviyorum.</p>
-    <h3>Şu an okuduğum kitap;</h3>
-    <p>İvan İlyiç'in Ölümü / L.N.Tolstoy</p>
+    <p>Merhaba. Ben Beyza. Bursa'da yaşıyorum. Grafik Tasarım mezunuyum fakat yazılıma ilgim olduğundan dolayı bu alanda
+        kendimi geliştiriyorum. Kitap okumayı çok seviyorum.</p>
+    <!-- İlgi Alanlarım -->
+    <h2>İlgi Alanlarım</h2>
+    <div>
+        <ol>
+            <li><span>Kitap</span>
+                <ul>
+                    <li><a href="https://www.goodreads.com/book/show/2040424.Saatleri_Ayarlama_Enstit_s_">Saatleri
+                            Ayarlama Enstitüsü</a></li>
+                    <li>Acımak</li>
+                    <li>Bir İdam Mahkumunun Son Günü</li>
+                </ul>
+            </li>
+            <li>Dizi
+                <ul>
+                    <li><a href="https://www.imdb.com/title/tt0108778/">Friends</a></li>
+                    <li>Modern Family</li>
+                    <li>Peaky Blinders</li>
+                </ul>
+            </li>
+            <li>Film
+                <ul>
+                    <li>Piyanist</li>
+                    <li>Soul</li>
+                    <li>Esaretin Bedeli</li>
+                </ul>
+            </li>
+        </ol>
+    </div>
+    <!-- Dizi -->
+    <h2>Friends</h2>
+    <img src="img/Friends.jpeg" alt="Friends" width="500">
+    <p>Friends, David Crane ve Marta Kauffman tarafından yaratılmış Amerikan yapımı sitcom türünde bir dizidir.</p>
 </body>
+
 </html>
